<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:text="WATER SAFE"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/custom_bartop"
            android:backgroundTint="@color/greenPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></com.google.android.material.textview.MaterialTextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="5dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:layout_height="30dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="@string/steps_watersafe_step1"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="5dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:layout_height="30dp">

                    <com.google.android.material.textview.MaterialTextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="@string/steps_watersafe_step2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="5dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:layout_height="30dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="@string/steps_watersafe_step3"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="5dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:layout_height="30dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="@string/steps_watersafe_step4"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="5dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:layout_height="30dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="@string/steps_watersafe_step5"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="5dp"
                    android:backgroundTint="@color/greenPrimary"
                    android:layout_height="30dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:text="@string/steps_watersafe_step6"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>