<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".modulos.login.views.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/yaku_agua"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="INGRESAR"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    style="@style/letra_titulos"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginBottom="8dp"
                    style="@style/CustomTextField">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:hint="Correo electrónico"
                        android:maxLength="50"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/color_input_text"
                    android:layout_marginBottom="8dp"
                    style="@style/CustomTextField">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:inputType="textPassword"
                        android:hint="Contraseña"
                        android:maxLength="50"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="@string/forget_pass"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ingresar_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="false"
                    android:layout_gravity="center"
                    android:textColor="@color/color_input_text"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/corner_boton_outline"
                    app:backgroundTint="@color/color_input_text"
                    android:text="Ingresar"
                    style="?android:textAppearanceSmall"/>


                <LinearLayout
                    android:id="@+id/lines_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/ingresar_login_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="2.5"
                        android:layout_gravity="center_vertical"
                        android:background="@color/color_text_web" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center_horizontal"
                        android:text="@string/otra_conexion"
                        android:textColor="@color/color_text_web" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="2.5"
                        android:layout_gravity="center_vertical"
                        android:background="@color/color_text_web" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continuar_anonimo_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:backgroundTint="@color/colorSecondaryDark"
                    android:backgroundTintMode="screen"
                    android:textColor="@color/white"
                    android:background="@drawable/corner_boton_outline"
                    android:text="Continuar anonimamente"
                    android:paddingLeft="15dp"
                    android:drawableStart="@drawable/ic_person_white"
                    style="?android:textAppearanceSmall"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/doesnt_have_account"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/btnRegister"
                        android:layout_width="wrap_content"
                        android:paddingStart="8dp"
                        android:textSize="15dp"
                        android:textColor="@color/colorSecondaryDark"
                        android:text="@string/create_account"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/terms_conditions_acepto"/>



            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cortinaLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dcffffff"
        android:elevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressbar_change_user"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"
            android:elevation="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <View
            android:id="@+id/view_agenda_docentes"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:elevation="8dp"
            android:backgroundTint="@color/white"
            />
        <TextView
            android:layout_height="25dp"
            android:text="Cargando..."
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/progressbar_change_user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
             android:layout_width="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>